--- a/test.ipynb
+++ b/test.ipynb
@@ -13,8 +13,8 @@
     "# -----------------------------\n",
     "# Constants & Display Messages\n",
     "# -----------------------------\n",
-    "ENGINE_RESOURCE = \"projects/641879769713/locations/us-central1/reasoningEngines/4165059997178265600\"\n",
-    "DEFAULT_USER = \"amirmeimand\"\n",
+    "ENGINE_RESOURCE = \"....\"\n",
+    "DEFAULT_USER = \"user1\"\n",
     "\n",
     "\n",
     "\n",
